# fork-live-translation-openai

./: .env.sample  IMPLEMENTATION_SUMMARY.md  README.md  TIMING_IMPROVEMENTS.md  TODO.md  analyze_api_performance.py  analyze_delay_accumulation.py  analyze_incomplete_translations.py  analyze_raw_logs.py  analyze_speech_detection_timing.py  analyze_timing.py  analyze_translation_interruptions.py  inbound_language_studio_flow.json  investigate_accumulating_state.py  log.txt  sample_log.txt
open-hands/: Dockerfile  run.sh
python_tests/: README.md  pyproject.toml  test_openai_realtime.py  test_openai_realtime_with_vad.py  test_script_structure.py  verify_audio_conversion.py
python_tests/test/: agent.ssml
src/: config.ts
src/routes/: intercept.ts  outbound-call.ts
src/services/: AudioInterceptor.ts  StreamSocket.ts
test/: README.md  agent.ssml  technician.ssml
