[project]
name = "openai-realtime-tests"
version = "0.1.0"
description = "Python test suite for OpenAI Realtime API translation functionality"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets>=12.0",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]